--- a/RDET2/Resources.plist
+++ b/RDET2/Resources.plist
@@ -11,7 +11,7 @@
 				<string>home-sprites</string>
 				<key>ImageFormat</key>
 				<string>RGBA4444</string>
-				<key>RBackground</key>
+				<key>Background</key>
 				<dict>
 					<key>Red</key>
 					<string>242</string>
@@ -29,32 +29,6 @@
 						<string>rocky01.png</string>
 						<key>PositionX</key>
 						<string>95</string>
-						<key>PositionY</key>
-						<string>65</string>
-						<key>Action</key>
-						<dict>
-							<key>ActionType</key>
-							<string>RepeatForever</string>
-							<key>ChildAction</key>
-							<dict>
-								<key>ActionType</key>
-								<string>Animate</string>
-								<key>Sequence</key>
-								<string>rocky%02d.png</string>
-								<key>NumFrames</key>
-								<string>2</string>
-								<key>Delay</key>
-								<string>0.5</string>
-								<key>RestoreOriginalFrame</key>
-								<false/>
-							</dict>
-						</dict>
-					</dict>
-					<dict>
-						<key>Name</key>
-						<string>rocky01.png</string>
-						<key>PositionX</key>
-						<string>E</string>
 						<key>PositionY</key>
 						<string>65</string>
 						<key>Action</key>
